BasePage追加・ヘッダーフッターUI完成

--- a/LocalDisasterPreventionInformationApp/LocalDisasterPreventionInformationApp.csproj
+++ b/LocalDisasterPreventionInformationApp/LocalDisasterPreventionInformationApp.csproj
@@ -72,6 +72,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Pages\Base\BasePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\Friends\ChatPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
