--- a/LocalDisasterPreventionInformationApp/LocalDisasterPreventionInformationApp.csproj
+++ b/LocalDisasterPreventionInformationApp/LocalDisasterPreventionInformationApp.csproj
@@ -73,6 +73,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiAsset Update="Resources\Raw\Locations.txt">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </MauiAsset>
 	  <MauiAsset Update="Resources\Raw\mergeFromCity_2.geojson">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </MauiAsset>
