Shelterテーブルへのデータ追加 完成

--- a/LocalDisasterPreventionInformationApp/LocalDisasterPreventionInformationApp.csproj
+++ b/LocalDisasterPreventionInformationApp/LocalDisasterPreventionInformationApp.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<MauiVersion>9.0.120</MauiVersion>
 		<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
@@ -74,7 +75,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <AndroidAsset Update="Platforms\Android\Assets\mergeFromCity_2.geojson">
+	  <AndroidAsset Update="Platforms\Android\Assets\mergefromcity_2.geojson">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	    <LogicalName>%(RecursiveDir)%(Filename)%(Extension)</LogicalName>
 	  </AndroidAsset>
@@ -84,7 +85,7 @@
 	  <MauiAsset Update="Resources\Raw\Locations.txt">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </MauiAsset>
-	  <MauiAsset Update="Resources\Raw\mergeFromCity_2.geojson">
+	  <MauiAsset Update="Resources\Raw\mergefromcity_2.geojson">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </MauiAsset>
 	</ItemGroup>
